--- a/Q.html
+++ b/Q.html
@@ -44,7 +44,7 @@
 		<script src="Q/Matrix.js"></script>
 		<script src="Q/Qubit.js"></script>
 		<script src="Q/Gate.js"></script>
-		<script src="Q/Program.js"></script>
+		<script src="Q/Circuit.js"></script>
 		<script src="Assets/navigation.js"></script>
 	</head>
 	<body>
