--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<script src="Q/Matrix.js"></script>
 		<script src="Q/Qubit.js"></script>
 		<script src="Q/Gate.js"></script>
-		<script src="Q/Program.js"></script>
+		<script src="Q/Circuit.js"></script>
 		<script src="Assets/navigation.js"></script>
 	</head>
 	<body>
@@ -251,7 +251,7 @@
 				(Note those are backticks, not quotes.)
 			</p>
 <pre><code>
-<a href="Q.html">Q</a>`H`.<a href="Program.html#.prototype.run">run</a>()
+<a href="Q.html">Q</a>`H-M`.<a href="Circuit.html#.prototype.run$">run$</a>().<a href="Circuit.html#.prototype.results">results</a>
 </code></pre>
 			<p>
 				Did you try it?
