fromText and toText support for multi-qubit gates.
Wow this is rickety as all get out, but functions. Good enough for a Saturday morning. Stability coming soon.

--- a/Circuit.html
+++ b/Circuit.html
@@ -470,6 +470,15 @@ q3  |0⟩───○──┤C21├┤ M │
              ╰───╯└───┘
 
 
+.toText()
+
+H  C00  M
+I  C10  M
+I  C01  M
+I  C11  M
+
+
+
 What about gate names that are more than 1 character?
 
 
