Exploring Circuit.trim$().

--- a/index.html
+++ b/index.html
@@ -282,11 +282,12 @@
 				<code><a href="ComplexNumber.html">ComplexNumber</a></code>,
 				<code><a href="Matrix.html">Matrix</a></code>,
 				<code><a href="Qubit.html">Qubit</a></code>,
-				and <code><a href="Gate.html">Gate</a></code> are functional,
-				the <code><a href="Circuit.html">Circuit</a></code> class is not.
+				<code><a href="Gate.html">Gate</a></code>, 
+				and <code><a href="Circuit.html">Circuit</a></code> are functional,
+				there are a lot of details to fill in.
 				(Stay tuned.)
 				Full functionality and a <a href="https://en.wikipedia.org/wiki/Graphical_user_interface" target="_blank">graphic user interface</a>—as an alternative to the console’s 
-				<a href="https://en.wikipedia.org/wiki/Command-line_interface" target="_blank">commaind-line interface</a>—are coming.
+				<a href="https://en.wikipedia.org/wiki/Command-line_interface" target="_blank">commaind-line interface</a>—are coming!
 				Developing and maintaining a consistent tone-of-voice across documentation, code, and code comments is a never-ending marathon, but it’s worth it.
 			</p>
 			<p>
